<resources>
    <string name="app_name">My Application</string>
    <string name="textView">RU Pizzeria</string>
    <string-array name="itemNames">
        <item>BBQ Chicken Chicago-Style</item>
        <item>BBQ Chicken NY-Style</item>
        <item>Build-Your-Own Chicago-Style</item>
        <item>Build-Your-Own NY-Style</item>
        <item>Deluxe Chicago-Style</item>
        <item>Deluxe NY-Style</item>
        <item>Meatzza Chicago-Style</item>
        <item>Meatzza NY-Style</item>
    </string-array>
    <string-array name="itemDescriptions">
        <item>Toppings: Sausage, Pepperoni, Beef,\nHam</item>
        <item>Toppings: Sausage, Pepperoni, Beef,\nHam</item>
        <item>Customizable, up to 7 toppings\n+$1.69 per topping</item>
        <item>Customizable, up to 7 toppings\n+$1.69 per topping</item>
        <item>Toppings: Sausage, Pepperoni, Green\nPepper, Onion, Mushroom</item>
        <item>Toppings: Sausage, Pepperoni, Green\nPepper, Onion, Mushroom</item>
        <item>Toppings: BBQ Chicken, Green Pepper,\nProvolone, Cheddar</item>
        <item>Toppings: BBQ Chicken, Green Pepper,\nProvolone, Cheddar</item>
    </string-array>
    <string-array name="itemCrusts">
        <item>Crust: Pan</item>
        <item>Crust: Thin</item>
        <item>Crust: Pan</item>
        <item>Crust: Hand-tossed</item>
        <item>Crust: Deep Dish</item>
        <item>Crust: Brooklyn</item>
        <item>Crust: Stuffed</item>
        <item>Crust: Hand-tossed</item>
    </string-array>
    <string name="image_desc">Image of Pizza</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="textview">TextView</string>
    <string name="backButton">Button</string>
    <string name="currentOrder">TextView</string>
    <string name="Back">Back</string>
    <string name="go_back">go_back</string>
    <string name="subtotalString">Subtotal $0.00</string>
    <string name="salesTaxString">Sales Tax $0.00</string>
    <string name="currentOrderString">Current Order</string>
    <string name="totalString">Total $0.00</string>
    <string name="placeOrderString">Place Order</string>
    <string name="clearOrderString">Clear Order</string>
    <string name="remove_info">(Long press item to remove)</string>
    <string name="orderNumberString">Order Number:</string>
    <string-array name="orderNumbers">
        
    </string-array>
</resources>